fix wrap in catalog

--- a/src/components/Catalog/Catalog.module.css
+++ b/src/components/Catalog/Catalog.module.css
@@ -19,6 +19,8 @@
 }
 
 .liBox {
+  width: 100%;
+  max-width: 276px;
   border: none;
   padding: 0;
 }
@@ -57,6 +59,7 @@
 .titleBox {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
   padding-top: 16px;
   padding-bottom: 8px;
@@ -68,6 +71,9 @@
   font-weight: 500;
   color: #101828;
   margin: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .blueTitle {
